Сделал страницу до 6 блока

--- a/less/style.less
+++ b/less/style.less
@@ -12,3 +12,15 @@
 /*----- instruments -----*/
 @import "main-instruments";
 /*----- end instruments -----*/
+
+/*----- realization -----*/
+@import "main-realization";
+/*----- end realization -----*/
+
+/*----- Multipurpose (mpp) -----*/
+@import "main-mpp";
+/*----- end multipurpose (mpp) -----*/
+
+/*----- Projects -----*/
+@import "main-projects";
+/*----- end Projects -----*/
