--- a/css/style.css
+++ b/css/style.css
@@ -301,3 +301,314 @@
   background-color: #c7b299;
 }
 /*----- end instruments -----*/
+/*----- realization -----*/
+.realization {
+  width: 100%;
+  padding: 83px 0 0 0;
+  box-sizing: border-box;
+  background-color: #fbfaf8;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.realization-tittle {
+  width: 100%;
+  text-align: center;
+  font-family: raleway;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 1.2;
+  color: #555555;
+  margin: 0 0 24px 0;
+}
+.realization-text {
+  width: 757px;
+  text-align: center;
+  font-family: Montserrat;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 28px;
+  color: #8c8c8c;
+  margin: 0 0 40px 0;
+}
+.realization-box {
+  width: 100%;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+.realization-box-img-left {
+  width: 770px;
+  height: 400px;
+  position: relative;
+  top: 0;
+  left: 540px;
+}
+.realization-box-img-center {
+  width: 770px;
+  height: 482px;
+  position: relative;
+  top: 0;
+  z-index: 3;
+}
+.realization-box-img-right {
+  width: 770px;
+  height: 400px;
+  position: relative;
+  top: 0;
+  right: 540px;
+}
+/*----- end realization -----*/
+/*----- Multipurpose (mpp) -----*/
+.mpp {
+  width: 100%;
+  padding: 48px 374px 50px 376px;
+  box-sizing: border-box;
+  background-color: #f4f5f8;
+  background-image: linear-gradient(90deg, #211b19 0%, #4e3427 100%);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.mpp-wrp {
+  width: 530px;
+}
+.mpp-wrp-tittle {
+  font-family: raleway;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 1.2;
+  color: #ffffff;
+  margin: 0 0 8px 0;
+}
+.mpp-wrp-tittle span {
+  font-family: raleway;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 1.2;
+  color: #c7b299;
+}
+.mpp-wrp-text {
+  font-family: Montserrat;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 1.2;
+  color: #615855;
+  margin: 0;
+}
+.mpp-btn {
+  width: 170px;
+  height: 50px;
+  background-color: #998675;
+  box-shadow: inset 0px -3px 0px 0px #736357;
+  border-radius: 3px;
+  font-family: raleway;
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 23px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+.mpp-btn:hover {
+  color: #000000;
+  background-color: #c4b9b0;
+}
+.mpp-btn:active {
+  color: #ffffff;
+  background-color: #998675;
+}
+/*----- end multipurpose (mpp) -----*/
+/*----- Projects -----*/
+.projects {
+  width: 100%;
+  padding: 81px 161px 80px 161px;
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.projects-tittle {
+  width: 100%;
+  text-align: center;
+  margin: 0 0 24px 0;
+  font-family: raleway;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 1.2;
+  color: #555555;
+}
+.projects-text {
+  width: 757px;
+  text-align: center;
+  margin: 0 0 40px 0;
+  font-family: Montserrat;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 28px;
+  color: #8c8c8c;
+}
+.projects-list {
+  width: 100%;
+  padding: 0;
+  box-sizing: border-box;
+  margin: 0 0 40px 0;
+  display: flex;
+  justify-content: center;
+}
+.projects-list-item {
+  list-style-type: none;
+  margin: 0 10px 0 0;
+}
+.projects-list-item-btn {
+  width: 120px;
+  height: 32px;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: rgba(17, 17, 17, 0);
+  border: 1px solid #ebebeb;
+  border-radius: 3px;
+  font-family: Montserrat;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 21px;
+  color: #8c8c8c;
+}
+.projects-list-item-btn:hover {
+  background-color: #998675;
+  color: #ffffff;
+}
+.projects-list-item-btn:active {
+  background-color: #ffffff;
+  color: #998675;
+}
+.projects-list-item:first-child button {
+  width: 70px;
+}
+.projects-list-item:last-child button {
+  width: 135px;
+}
+.projects-list-item:last-child {
+  margin: 0;
+}
+.projects-card {
+  width: 370px;
+  min-height: 337px;
+  margin: 0 30px 30px 0;
+  position: relative;
+}
+.projects-card-img {
+  width: 370px;
+  height: 237px;
+  display: block;
+}
+.projects-card-wrp {
+  background-color: #fbfaf8;
+  padding: 30px 0 27px 28px;
+  box-sizing: border-box;
+  position: relative;
+}
+.projects-card-wrp:before {
+  content: '';
+  position: absolute;
+  border: 15px solid transparent;
+  border-bottom: 10px solid #fbfaf8;
+  top: -25px;
+  left: 19px;
+}
+.projects-card-wrp-heading {
+  font-family: raleway;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  color: #c7b299;
+  margin: 0 0 14px 0;
+}
+.projects-card-wrp-text {
+  font-family: Montserrat;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 20px;
+  color: #d1d1d1;
+  margin: 0;
+}
+.projects-card:hover .projects-card-img {
+  filter: brightness(30%);
+}
+.projects-card:hover .projects-card-wrp {
+  background-color: #362f2d;
+}
+.projects-card:hover .projects-card-wrp:before {
+  border-bottom: 10px solid #362f2d;
+}
+.projects-card:hover .projects-card-wrp-heading {
+  color: #ffffff;
+}
+.projects-card:hover .projects-card-wrp-text {
+  color: #c7b299;
+}
+.projects-card:hover .projects-card-btn-link {
+  display: block;
+  color: #ffffff;
+}
+.projects-card:hover .projects-card-btn-search {
+  display: block;
+  color: #ffffff;
+}
+.projects-card:hover .projects-card-btn-link-svg,
+.projects-card-btn-search-svg {
+  fill: currentColor;
+}
+.projects-card-btn-link,
+.projects-card-btn-search {
+  width: 26px;
+  height: 26px;
+  display: none;
+  position: absolute;
+  top: 106px;
+  padding: 0;
+  box-sizing: border-box;
+  background: none;
+  border: none;
+}
+.projects-card-btn-link {
+  left: 144px;
+}
+.projects-card-btn-search {
+  right: 146px;
+}
+.projects-card-btn-link-svg:hover,
+.projects-card-btn-search-svg:hover {
+  color: #c7b299;
+}
+.projects-card-btn-link-svg:active,
+.projects-card-btn-search-svg:active {
+  color: #ffffff;
+}
+.projects-box {
+  width: 100%;
+  text-align: center;
+}
+.projects-box-btn {
+  width: 170px;
+  height: 50px;
+  background-color: #998675;
+  box-shadow: inset 0px -3px 0px 0px #736357;
+  border-radius: 3px;
+  font-family: Raleway;
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 23px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+.projects-box-btn:hover {
+  color: #000000;
+  background-color: #c4b9b0;
+}
+.projects-box-btn:active {
+  color: #ffffff;
+  background-color: #998675;
+}
+/*----- end Projects -----*/
