--- a/less/main-instruments.less
+++ b/less/main-instruments.less
@@ -9,7 +9,8 @@
     justify-content: center;
 
     &-card {
-        width: 266px;
+        max-width: 266px;
+        width: 100%;
         margin: 0 34px 0 0;
         text-align: center;
         color: #555555;
@@ -29,7 +30,7 @@
         }
 
         &-txt {
-            .text(Montserrat, 300);
+            .text(montserrat, 300);
             line-height: 24px;
             color: #8c8c8c;
             margin: 0 0 30px 0;
