--- a/less/font.less
+++ b/less/font.less
@@ -27,6 +27,15 @@
 
 @font-face {
     font-family: 'raleway';
+    src: url(../fonts/raleway-bold-webfont.woff2) format('woff2'),
+        url(../fonts/raleway-bold-webfont.woff) format('woff'),
+        url(../fonts/raleway-bold.ttf) format('ttf');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'raleway';
     src: url(../fonts/raleway-extrabold-webfont.woff2) format('woff2'),
         url(../fonts/raleway-extrabold-webfont.woff) format('woff'),
         url(../fonts/raleway-extrabold.ttf) format('ttf');
@@ -34,12 +43,30 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'montserrat';
+    src: url(../fonts/montserrat-extralight-webfont.woff2) format('woff2'),
+        url(../fonts/montserrat-extralight-webfont.woff) format('woff'),
+        url(../fonts/montserrat-extraLight.otf) format('otf');
+    font-weight: 200;
+    font-style: normal;
+}
+
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'montserrat';
+    src: url(../fonts/montserrat-light-webfont.woff2) format('woff2'),
+        url(../fonts/montserrat-light-webfont.woff) format('woff'),
+        url(../fonts/montserrat-light.otf) format('otf');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'montserrat';
     src: url(../fonts/montserrat-regular-webfont.woff2) format('woff2'),
         url(../fonts/montserrat-regular-webfont.woff) format('woff'),
         url(../fonts/montserrat-regular.otf) format('otf');
-    font-weight: 300;
+    font-weight: 400;
     font-style: normal;
 }
