--- a/less/main-mpp.less
+++ b/less/main-mpp.less
@@ -3,17 +3,19 @@
 
 .mpp {
     width: 100%;
-    padding: 48px 374px 50px 376px;
+    padding: 48px 0 50px 0;
     box-sizing: border-box;
     background-color: #f4f5f8;
     background-image: linear-gradient(90.0deg, #211b19 0%, #4e3427 100%);
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 
     &-wrp {
-        width: 530px;
+        max-width: 530px;
+        width: 100%;
+        margin: 0 470px 0 0;
 
         &-tittle {
             .text(raleway, 400, 28px);
@@ -29,7 +31,7 @@
         }
 
         &-text {
-            .text(Montserrat, 300, 18px);
+            .text(montserrat, 300, 18px);
             line-height: 1.2;
             color: #615855;
             margin: 0;
@@ -37,11 +39,12 @@
     }
 
     &-btn {
-        width: 170px;
+        max-width: 170px;
+        width: 100%;
         height: 50px;
         background-color: #998675;
-        box-shadow: inset 0px -3px 0px 0px #736357;
         border-radius: 3px;
+        border: 0;
         .text(raleway, 800);
         line-height: 23px;
         text-transform: uppercase;
@@ -55,6 +58,7 @@
         &:active {
             color: #ffffff;
             background-color: #998675;
+            border: 0;
         }
     }
 }
