--- a/less/main-projects.less
+++ b/less/main-projects.less
@@ -3,7 +3,7 @@
 
 .projects {
     width: 100%;
-    padding: 81px 161px 80px 161px;
+    padding: 81px 200px 80px 200px;
     box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
@@ -19,10 +19,11 @@
     }
 
     &-text {
-        width: 757px;
+        max-width: 757px;
+        width: 100%;
         text-align: center;
         margin: 0 0 40px 0;
-        .text(Montserrat, 300, 16px);
+        .text(montserrat, 300, 16px);
         line-height: 28px;
         color: #8c8c8c;
     }
@@ -47,7 +48,7 @@
                 background-color: rgba(17, 17, 17, 0.0);
                 border: 1px solid #ebebeb;
                 border-radius: 3px;
-                .text (Montserrat, 300);
+                .text (montserrat, 300);
                 line-height: 21px;
                 color: #8c8c8c;
 
@@ -77,13 +78,15 @@
     }
 
     &-card {
-        width: 370px;
+        max-width: 370px;
+        width: 100%;
         min-height: 337px;
         margin: 0 30px 30px 0;
         position: relative;
 
         &-img {
-            width: 370px;
+            max-width: 370px;
+            width: 100%;
             height: 237px;
             display: block;
         }
@@ -111,7 +114,7 @@
             }
 
             &-text {
-                .text (Montserrat, 300);
+                .text (montserrat, 300);
                 line-height: 20px;
                 color: #d1d1d1;
                 margin: 0;
@@ -155,7 +158,8 @@
 
         &-btn-link,
         &-btn-search {
-            width: 26px;
+            max-width: 26px;
+            width: 100%;
             height: 26px;
             display: none;
             position: absolute;
@@ -191,11 +195,12 @@
         text-align: center;
 
         &-btn {
-            width: 170px;
+            max-width: 170px;
+            width: 100%;
             height: 50px;
             background-color: #998675;
-            box-shadow: inset 0px -3px 0px 0px #736357;
             border-radius: 3px;
+            border: 0;
             .text(Raleway, 800);
             line-height: 23px;
             text-transform: uppercase;
@@ -209,6 +214,7 @@
             &:active {
                 color: #ffffff;
                 background-color: #998675;
+                border: 0;
             }
         }
     }
