--- a/less/main-realization.less
+++ b/less/main-realization.less
@@ -20,9 +20,10 @@
     }
 
     &-text {
-        width: 757px;
+        max-width: 757px;
+        width: 100%;
         text-align: center;
-        .text(Montserrat, 300, 16px);
+        .text(montserrat, 300, 16px);
         line-height: 28px;
         color: #8c8c8c;
         margin: 0 0 40px 0;
@@ -36,7 +37,8 @@
         align-items: flex-end;
 
         &-img-left {
-            width: 770px;
+            max-width: 770px;
+            width: 100%;
             height: 400px;
             position: relative;
             top: 0;
@@ -44,7 +46,8 @@
         }
 
         &-img-center {
-            width: 770px;
+            max-width: 770px;
+            width: 100%;
             height: 482px;
             position: relative;
             top: 0;
@@ -52,7 +55,8 @@
         }
 
         &-img-right {
-            width: 770px;
+            max-width: 770px;
+            width: 100%;
             height: 400px;
             position: relative;
             top: 0;
