--- a/less/style.less
+++ b/less/style.less
@@ -24,3 +24,15 @@
 /*----- Projects -----*/
 @import "main-projects";
 /*----- end Projects -----*/
+
+/*----- Video ----*/
+@import "main-video";
+/*-----end Video -----*/
+
+/*----- Mobile -----*/
+@import "main-mobile";
+/*----- end Mobile -----*/
+
+/*----- Statistic -----*/
+@import "main-statistic";
+/*----- end Statistic -----*/
