--- a/less/header.less
+++ b/less/header.less
@@ -78,6 +78,11 @@
         &-basket {
             color: #ffffff;
             margin: 0 28px 0 0;
+            border: 0;
+            cursor: pointer;
+            background-color: transparent;
+            padding: 0;
+            box-sizing: border-box;
 
             &-icon {
                 fill: currentColor;
@@ -94,6 +99,11 @@
 
         &-search {
             color: #ffffff;
+            border: 0;
+            cursor: pointer;
+            background-color: transparent;
+            padding: 0;
+            box-sizing: border-box;
 
             &-icon {
                 fill: currentColor;
@@ -127,6 +137,7 @@
         box-sizing: border-box;
         background-color: transparent;
         color: #ffffff;
+        cursor: pointer;
 
         &-svg {
             fill: currentColor;
@@ -178,6 +189,7 @@
             text-transform: uppercase;
             color: #ffffff;
             border: 0;
+            cursor: pointer;
 
             &:hover {
                 color: darken(#998675, 80%);
@@ -202,6 +214,7 @@
         box-sizing: border-box;
         background-color: transparent;
         color: #ffffff;
+        cursor: pointer;
 
         &-svg {
             fill: currentColor;
@@ -233,6 +246,7 @@
             border-radius: 50%;
             border: 1px solid transparent;
             margin: 0 10px 0 0;
+            cursor: pointer;
 
             &:last-child {
                 margin: 0;
