--- a/less/main-projects.less
+++ b/less/main-projects.less
@@ -51,6 +51,7 @@
                 .text (montserrat, 300);
                 line-height: 21px;
                 color: #8c8c8c;
+                cursor: pointer;
 
                 &:hover {
                     background-color: #998675;
@@ -144,11 +145,13 @@
         &:hover &-btn-link {
             display: block;
             color: #ffffff;
+            cursor: pointer;
         }
 
         &:hover &-btn-search {
             display: block;
             color: #ffffff;
+            cursor: pointer;
         }
 
         &:hover &-btn-link-svg,
@@ -205,6 +208,7 @@
             line-height: 23px;
             text-transform: uppercase;
             color: #ffffff;
+            cursor: pointer;
 
             &:hover {
                 color: darken(#998675, 80%);
