--- a/less/main-video.less
+++ b/less/main-video.less
@@ -30,6 +30,7 @@
             background-color: rgba(0, 0, 0, 0.2);
             padding: 0;
             box-sizing: border-box;
+            cursor: pointer;
 
             &-svg {
                 margin: auto;
