--- a/less/style.less
+++ b/less/style.less
@@ -36,3 +36,16 @@
 /*----- Statistic -----*/
 @import "main-statistic";
 /*----- end Statistic -----*/
+
+/* ----- Posts -----*/
+@import "main-posts";
+/* ----- end Posts -----*/
+
+/*----- Partners -----*/
+@import "main-partners";
+/*----- end Partners -----*/
+/*-----end Main -----*/
+
+/*----- Footer -----*/
+@import "footer";
+/*-----end Footer -----*/
