--- a/less/font.less
+++ b/less/font.less
@@ -70,3 +70,12 @@
     font-weight: 400;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'roboto';
+    src: url(../fonts/roboto-regular-webfont.woff2) format('woff2'),
+        url(../fonts/roboto-regular-webfont.woff) format('woff'),
+        url(../fonts/roboto-regular.ttf) format('ttf');
+    font-weight: 400;
+    font-style: normal;
+}
