--- a/less/main-mpp.less
+++ b/less/main-mpp.less
@@ -49,6 +49,7 @@
         line-height: 23px;
         text-transform: uppercase;
         color: #ffffff;
+        cursor: pointer;
 
         &:hover {
             color: darken(#998675, 80%);
